# bolt-python-ai-chatbot

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  manifest.json  pyproject.toml  requirements.txt  slack.json
.github/workflows/: black.yml  ruff.yml
ai/: ai_constants.py
ai/ai_utils/: ai_constants.py  get_available_apis.py  get_available_providers.py  handle_response.py
ai/providers/: __init__.py  anthropic.py  azureai.py  base_provider.py  openai.py  vertexai.py
backend/mygreat_shawn/: README.md  api.py  db.py
listeners/: __init__.py
listeners/actions/: __init__.py  set_user_selection.py
listeners/assistant/: __init__.py  assistant.py
listeners/commands/: __init__.py  ask_command.py
listeners/events/: __init__.py  app_home_opened.py  app_mentioned.py  app_messaged.py  dm_sent.py
listeners/functions/: __init__.py  summary_function.py
listeners/listener_utils/: listener_constants.py  parse_conversation.py
state_store/: create_file.py  file_state_store.py  get_user_state.py  set_user_state.py  state_store.py  user_identity.py  user_state_store.py
