[project]
name = "bolt-python-ai-chatbot"
version = "0.1.0"
description = "Slack AI chatbot POC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.57.1",
    "black==25.1.0",
    "flake8==7.3.0",
    "google-cloud-aiplatform==1.103.0",
    "openai==1.95.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "slack-bolt==1.23.0",
    "slack-cli-hooks==0.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_file = "logs/pytest.log"
log_file_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
